# ymir

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.sh
.github/workflows/: ci.yaml
docker/firmware/: Dockerfile
docker/tests/: Dockerfile
firmware/cmake/: toolchain-arm-none-eabi.cmake
firmware/cubemx/: CMakeLists.txt
firmware/cubemx/Core/Inc/: main.h
firmware/cubemx/Core/Src/: gpio.c  main.c
firmware/cubemx/USB_DEVICE/App/: usb_device.c  usbd_cdc_if.c  usbd_desc.c
firmware/cubemx/cmake/stm32cubemx/: CMakeLists.txt
firmware/include/ymir/: api.h
firmware/linker/: app_slot_a.ld  app_slot_b.ld  bootloader.ld
firmware/test_app_baremetal/app/: CMakeLists.txt  CMakePresets.json
firmware/test_app_baremetal/app/src/: main.cpp
firmware/test_app_baremetal/cubemx/: .mxproject  cubemx.ioc
firmware/test_app_baremetal/cubemx/Core/Inc/: stm32f4xx_hal_conf.h
firmware/test_app_baremetal/cubemx/Core/Src/: main.c
firmware/test_app_baremetal/cubemx/USB_DEVICE/App/: usbd_desc.c
firmware/test_app_rtos/app/: CMakeLists.txt  CMakePresets.json
firmware/test_app_rtos/app/src/: main.c
firmware/test_app_rtos/cubemx/: .mxproject  cubemx.ioc
firmware/test_app_rtos/cubemx/Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
firmware/test_app_rtos/cubemx/Core/Src/: freertos.c  iwdg.c  main.c  stm32f4xx_it.c
firmware/test_app_rtos/cubemx/USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
firmware/test_app_rtos/cubemx/cmake/stm32cubemx/: CMakeLists.txt
firmware/ymir/: CMakeLists.txt  CMakePresets.json
firmware/ymir/include/ymir/: boot_jump.hpp  boot_manager.hpp  crc32.hpp  dfu_led.hpp  flash.hpp  flash_hw.hpp  flash_layout.hpp  image.hpp  metadata.hpp  protocol.hpp  sha256.hpp  transport.hpp  usb_transport.hpp
firmware/ymir/src/: boot_jump.cpp  boot_manager.cpp  crc32.cpp  dfu_led_hw.cpp  flash.cpp  flash_hw.cpp  image.cpp  main.cpp  metadata.cpp  protocol.cpp  sha256.cpp  usb_transport.cpp
firmware/ymir_api/: CMakeLists.txt
firmware/ymir_api/src/: api.cpp  platform.hpp  platform_hw.cpp
scripts/: flash_tool.sh  ota_loop.sh  prepare_image.py
tests/: conftest.py
tests/hardware/: test_ota.py
tests/unit/: CMakeLists.txt  dfu_led_test.cpp  fake_flash.cpp  platform_test.cpp  test_api.cpp  test_crc32.cpp  test_image.cpp  test_metadata.cpp  test_prepare_image.py  test_protocol.cpp  test_sha256.cpp  validate_image_cli.cpp
